[project]
name = "litgpt"
version = "0.5.8.dev1"
description = "Hackable implementation of state-of-the-art open-source LLMs"
authors = [
    { name = "Lightning AI", email = "contact@lightning.ai" },
]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "torch >=2.5.0,<2.7.0",
    "numpy <2.0", # for older Torch versions
    "lightning >=2.5.0,<2.6.0",
    "jsonargparse[signatures] >=4.30.1,<=4.32.1; python_version<='3.9'", # 4.33 does not seem to be compatible with Python 3.9
    "jsonargparse[signatures] >=4.37.0; python_version>'3.9'", # required to work with python3.12+
    # download models:
    "huggingface_hub >=0.23.5",
    "safetensors >=0.4.3",
    # tokenization in most models:
    "tokenizers >=0.15.2",
    # convert_hf_checkpoint
    "tqdm >=4.66.0",
]

[project.urls]
homepage = "https://github.com/lightning-AI/litgpt"
documentation = "https://github.com/lightning-AI/litgpt/tutorials"

[project.scripts]
litgpt = "litgpt.__main__:main"

[project.optional-dependencies]
compiler = [
    # compilaton:
    "lightning-thunder >=0.2.0.dev20250119 ; python_version >= '3.10' and sys_platform == 'linux'"
]
test = [
    "pytest >=8.1.1",
    "pytest-rerunfailures >=14.0",
    "pytest-timeout >=2.3.1",
    "pytest-dependency >=0.6.0",
    "transformers ==4.47.1",  # numerical comparisons
    "einops >=0.7.0",
    "protobuf >=4.23.4",
]
extra = [
    # quantization:
    "bitsandbytes >=0.45.2,<0.46.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "bitsandbytes >=0.42.0,<0.43.0 ; sys_platform == 'darwin'",
    # llama-based models:
    "sentencepiece >=0.2.0",
    # litgpt.data:
    "requests >=2.31.0",
    "litdata ==0.2.17",
    # litgpt.deploy:
    "litserve <=0.2.4",
    # litgpt.data.prepare_slimpajama.py:
    "zstandard >=0.22.0",
    # litgpt.data.prepare_starcoder.py:
    "pandas >=1.9.0",
    "pyarrow >=15.0.2",
    # litgpt.pretrain:
    "tensorboard >=2.14.0",
    "torchmetrics >=1.3.1",
    # litgpt.evaluate:
    "datasets >=2.18.0",
    "transformers ==4.47.1",
    "lm-eval >=0.4.2",
    # download:
    "huggingface_hub[hf_transfer] >=0.21.0",
    # litdata, only on non-Windows:
    "uvloop >=0.2.0 ; sys_platform != 'win32'"
]

[build-system]
requires = [
    "setuptools >=68.2.2",
    "wheel >=0.41.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "litgpt",
    "litgpt.*",
]
exclude = []

[tool.setuptools.package-data]
litgpt = [
    "LICENSE",
    "README.md",
]

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  #"--doctest-modules",
  "--color=yes",
  "--disable-pytest-warnings",
]
