[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=68.2.2",
  "wheel>=0.41.2",
]

[project]
name = "litgpt"
version = "0.5.8.dev1"
description = "Hackable implementation of state-of-the-art open-source LLMs"
readme = "README.md"
license = { file = "LICENSE" }

authors = [
  { name = "Lightning AI", email = "contact@lightning.ai" },
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # download models:
  "huggingface-hub>=0.23.5",
  "jsonargparse[signatures]>=4.30.1,<=4.32.1; python_version<='3.9'", # 4.33 does not seem to be compatible with Python 3.9
  "jsonargparse[signatures]>=4.37; python_version>'3.9'",             # required to work with python3.12+
  "lightning>=2.5,<2.6",
  "numpy<2",                                                          # for older Torch versions
  "safetensors>=0.4.3",
  # tokenization in most models:
  "tokenizers>=0.15.2",
  "torch>=2.5,<2.7",
  # convert_hf_checkpoint
  "tqdm>=4.66",
]

optional-dependencies.compiler = [
  # compilaton:
  "lightning-thunder>=0.2.0.dev20250119; python_version>='3.10' and sys_platform=='linux'",
]
optional-dependencies.extra = [
  "bitsandbytes>=0.42,<0.43; sys_platform=='darwin'",
  # quantization:
  "bitsandbytes>=0.45.2,<0.46; sys_platform=='linux' or sys_platform=='win32'",
  # litgpt.evaluate:
  "datasets>=2.18",
  # download:
  "huggingface-hub[hf-transfer]>=0.21",
  "litdata==0.2.17",
  # litgpt.deploy:
  "litserve<=0.2.4",
  "lm-eval>=0.4.2",
  # litgpt.data.prepare_starcoder.py:
  "pandas>=1.9",
  "pyarrow>=15.0.2",
  # litgpt.data:
  "requests>=2.31",
  # llama-based models:
  "sentencepiece>=0.2",
  # litgpt.pretrain:
  "tensorboard>=2.14",
  "torchmetrics>=1.3.1",
  "transformers==4.49.0",
  # litdata, only on non-Windows:
  "uvloop>=0.2; sys_platform!='win32'",
  # litgpt.data.prepare_slimpajama.py:
  "zstandard>=0.22",
]
optional-dependencies.test = [
  "einops >=0.7",
  "protobuf >=4.23.4",
  "pytest >=8.1.1",
  "pytest-dependency >=0.6",
  "pytest-rerunfailures >=14",
  "pytest-timeout >=2.3.1",
  "transformers ==4.49.0",     # numerical comparisons
]
urls.documentation = "https://github.com/lightning-AI/litgpt/tutorials"
urls.homepage = "https://github.com/lightning-AI/litgpt"
scripts.litgpt = "litgpt.__main__:main"

[tool.setuptools.packages.find]
include = [
  "litgpt",
  "litgpt.*",
]
exclude = [  ]

[tool.setuptools.package-data]
litgpt = [
  "LICENSE",
  "README.md",
]

[tool.codespell]
#skip = '*.py'
quiet-level = 3
ignore-words-list = """
  tral, \
  Rockerfeller
"""

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  #"--doctest-modules",
  "--color=yes",
  "--disable-pytest-warnings",
]
